add favicon, bump deps

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <base href="/" />
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="public/favicon.svg" type="image/svg+xml">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="bodynar@gmail.com">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
